--- a/index.html
+++ b/index.html
@@ -13,6 +13,31 @@
   <body>
 
     <main class="main-all">
+      <header>
+        <div class="div">
+          <div class="div-2">
+            <div class="div-3">
+              <div class="div-4">LOGO</div>
+              <div class="div-5">
+                <div class="div-6">Home</div>
+                <div class="div-7">
+                  Games
+                  <br />
+                </div>
+                <div class="div-8">About us</div>
+                <div class="div-9">News</div>
+              </div>
+            </div>
+            <img
+              loading="lazy"
+              src="https://cdn.builder.io/api/v1/image/assets/TEMP/32d4839610299bd53ae23671eaaf11b1dc33496de3ac21341d52ce48985349e9?"
+              class="img"
+            />
+          </div>
+          <div class="div-10">page theme</div>
+        </div>
+      </header>
+
       <div class="main-top">
         <div class="home_game"><span class="home">Home > </span>  <span class="games">  Games</span> </div>
         <div class="lorem-first"><p>Lorem Ipsum is simply<br> dummy text of the printing<br> and.</p></div>
@@ -113,6 +138,59 @@
           </div>
         </article>
       </div>
+
+
+      <footer class="footer-table">
+        <div class="footer-up-div">
+          <div class="footer-div-left">
+
+            <div class="footer-div1">
+              <h4>LOGO</h4>
+              <br>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+              <br><br>
+              <p>@LOGO</p>
+            </div>
+
+            <div class="footer-div2">
+              <ul class="footer-ul">
+                <li>About us</li>
+                <br>
+                <li>zeux</li>
+                <li>portfolio</li>
+                <li>careers</li>
+                <li>Contact us</li>
+              </ul>
+            </div>
+
+            <div class="footer-div3">
+              <h4>Contact us</h4>
+              <br>
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry</p>
+              <br><br>
+              <p>+0908089097890</p>
+            </div>
+
+            <div class="footer-div4">
+              <i class="footer-icons"><img src="./assets/images/Group 5.svg" class="fa-brands fa-facebook"></img></i>
+              <i class="footer-icons"><img src="./assets/images/Group 11.svg" class="fa-brands fa-instagram"></img></i>
+              <i class="footer-icons"><img src="./assets/images/Group 10.svg" class="fa-brands fa-twitter"></img></i>
+              <i class="footer-icons"><img src="./assets/images/Group 9.svg" class="fa-solid fa-inbox"></img></i>
+            </div>
+          </div>
+        </div>
+
+        <hr>
+
+        <div class="footer-buttom-div">
+          <p>
+            copyright©2022
+            <b>Sahar Omran</b>
+            All right Rcerved 
+          </p>
+        </div>
+
+      </footer>
 
       
 
