--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- favicon -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <title>GAMiFY</title>
   </head>
   <body>
@@ -15,35 +18,35 @@
     <main class="main-all">
       <header>
         <div class="div">
-          <div class="div-2">
+        <div class="div-2">
             <div class="div-3">
-              <div class="div-4">LOGO</div>
-              <div class="div-5">
-                <div class="div-6">Home</div>
+            <div class="div-4">LOGO</div>
+            <div class="div-5">
+                <div class="div-6"><a href="index2.html">Home</a></div>
                 <div class="div-7">
-                  Games
-                  <br />
+                  <a href="#">Games</a>
+                <br />
                 </div>
-                <div class="div-8">About us</div>
-                <div class="div-9">News</div>
-              </div>
+                <div class="div-8"><a href="#">About us</a></div>
+                <div class="div-9"><a href="#">News</a></div>
+            </div>
             </div>
             <img
-              loading="lazy"
-              src="https://cdn.builder.io/api/v1/image/assets/TEMP/32d4839610299bd53ae23671eaaf11b1dc33496de3ac21341d52ce48985349e9?"
-              class="img"
+            loading="lazy"
+            src="assets/images/page1/active-bar.png"
+            class="img"
             />
-          </div>
-          <div class="div-10">page theme</div>
         </div>
-      </header>
+        <button class="div-10"><a>page theme</a></button>
+        </div>
+    </header>
 
       <div class="main-top">
         <div class="home_game"><span class="home">Home > </span>  <span class="games">  Games</span> </div>
         <div class="lorem-first"><p>Lorem Ipsum is simply<br> dummy text of the printing<br> and.</p></div>
         <div class="lorem-secound"><h5 style="display: inline-block;"></h5>Lorem Ipsum is simply dummy text of the printing and<br>
         typesetting industry. Lorem Ipsum has been the<br>
-        industry's standard dummy text ever since the 1500s.<img src="./assets/images/Rectangle 6.png" style="margin-left: 10px"></h5></div>
+        industry's standard dummy text ever since the 1500s.<img src="./assets/images/page1/Rectangle 6.png" style="margin-left: 10px"></h5></div>
         <button class="get-in-touch">Get in touch <i class="bi bi-arrow-right-short"></i> </button>
       
       </div>
@@ -75,7 +78,7 @@
 
       <div class="center-section">
         <div class="img-center">
-          <img src="./assets//images//Rectangle 25.svg">
+          <img src="./assets//images/page1/Rectangle 25.svg">
         </div>
         <div class="text-center">
           <h4>Lorem ipsum</h4>
@@ -88,28 +91,28 @@
       
       <div class="team">
         <article class="person">
-          <img src="./assets/images/Bill 1.svg" alt="Sample photo">
+          <img src="./assets/images/page1/Bill 1.svg" alt="Sample photo">
           <div class="text">
             <h3>your name</h3>
             <h4>COO</h4>
           </div>
         </article>
         <article class="person">
-          <img src="./assets/images/Beverly 1.svg" alt="Sample photo">
+          <img src="./assets/images/page1/Beverly 1.svg" alt="Sample photo">
           <div class="text">
             <h3>your name</h3>
             <h4>COO</h4>
           </div>
         </article>
         <article class="person">
-          <img src="./assets/images/Claudia 1.svg" alt="Sample photo">
+          <img src="./assets/images/page1/Claudia 1.svg" alt="Sample photo">
           <div class="text">
             <h3>your name</h3>
             <h4>COO</h4>
           </div>
         </article>
         <article class="person">
-          <img src="./assets/images/Avatar 1.svg" alt="Sample photo">
+          <img src="./assets/images/page1/Avatar 1.svg" alt="Sample photo">
           <div class="text">
             <h3>your name</h3>
             <h4>COO</h4>
@@ -154,12 +157,12 @@
 
             <div class="footer-div2">
               <ul class="footer-ul">
-                <li>About us</li>
+                <li><a href="#">About us</a></li>
                 <br>
-                <li>zeux</li>
-                <li>portfolio</li>
-                <li>careers</li>
-                <li>Contact us</li>
+                <li><a href="#">zeux</a></li>
+                <li><a href="#">portfolio</a></li>
+                <li><a href="#">careers</a></li>
+                <li><a href="#">Contact us</a></li>
               </ul>
             </div>
 
@@ -172,10 +175,10 @@
             </div>
 
             <div class="footer-div4">
-              <i class="footer-icons"><img src="./assets/images/Group 5.svg" class="fa-brands fa-facebook"></img></i>
-              <i class="footer-icons"><img src="./assets/images/Group 11.svg" class="fa-brands fa-instagram"></img></i>
-              <i class="footer-icons"><img src="./assets/images/Group 10.svg" class="fa-brands fa-twitter"></img></i>
-              <i class="footer-icons"><img src="./assets/images/Group 9.svg" class="fa-solid fa-inbox"></img></i>
+              <i class="footer-icons"><img src="./assets/images/page1/Group 5.svg" class="fa-brands fa-facebook"></img></i>
+              <i class="footer-icons"><img src="./assets/images/page1/Group 11.svg" class="fa-brands fa-instagram"></img></i>
+              <i class="footer-icons"><img src="./assets/images/page1/Group 10.svg" class="fa-brands fa-twitter"></img></i>
+              <i class="footer-icons"><img src="./assets/images/page1/Group 9.svg" class="fa-solid fa-inbox"></img></i>
             </div>
           </div>
         </div>
