--- a/index2.html
+++ b/index2.html
@@ -6,7 +6,7 @@
     <!-- description -->
     <link href="styles/style2.css" rel="stylesheet" type="text/css">
     <meta name="description" content="Gaming-website." />
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="assets/images/page1/favicon.ico" type="image/x-icon" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">	
     <link rel="stylesheet" href="https://fontawesome.com/icons/facebook?f=brands&s=solid">
     <link rel="preconnect" href="https://fonts.googleapis.com">
